--- a/back/package.json
+++ b/back/package.json
@@ -5,15 +5,27 @@
   "main": "index.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node-dev src/index.ts",
+    "db-up": "db-migrate up"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.3.0"
+    "@types/pg": "^8.6.5",
+    "@types/pino": "^7.0.5",
+    "@types/uuid": "^8.3.4",
+    "abstract-logging": "^2.0.1",
+    "db-migrate": "^0.11.13",
+    "db-migrate-pg": "^1.2.2",
+    "fastify": "^4.3.0",
+    "pg": "^8.7.3",
+    "pino": "^8.3.1",
+    "pino-pretty": "^8.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^18.6.3",
+    "dotenv": "^16.0.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
