--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -1,12 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    },
+    "baseUrl": "src",
     "lib": [
       "dom",
       "dom.iterable",
