--- a/front/package.json
+++ b/front/package.json
@@ -9,21 +9,27 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6"
+    "@types/react-dom": "^18.0.6",
+    "craco": "^0.0.3",
+    "sass": "^1.54.4",
+    "sass-loader": "^13.0.2"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "dayjs": "^1.11.4",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
